# C-codes

./: DuplicateHandlers.c  Unique_elements_printer.c  copyTheArray.c  reverseArray.c
Algorithms/Implementation/: BubbleSort.c  InsertionSort.c  MergeSort  MergeSort.c  QuickSort  QuickSort.c  SelectionSort.c
Algorithms/Pseudocodes/: BubbleSort.txt  InsertionSort.txt  MergeSort.txt  QuickSort.txt  SelectionSort.txt
Database/Library Management System/: Makefile  build.bat  compile.bat  console_ui.c  database.c  database.h  gui_ui.c  main.c
Database/Library_management_system/: CMakeLists.txt  Makefile  README.md  compile.bat  create_database.sql
Database/Library_management_system/build_new/: CMakeCache.txt  Makefile  cmake_install.cmake
Database/Library_management_system/cmake/: FindMySQL.cmake
Database/Library_management_system/include/: author.h  book.h  books_page.h  borrowing.h  console_ui.h  database.h  fine.h  gui.h  main_window.h  member.h  publisher.h  staff.h
Database/Library_management_system/src/: book.c  main.c
Database/Library_management_system/src/console/: console_ui.c
Database/Library_management_system/src/database/: database.c  schema.sql
Database/Library_management_system/src/gui/: authors_page.c  books_page.c  books_page.c.new  books_page.h  main_window.c
Database/Library_management_system/src/models/: author.c  book.c  borrowing.c  fine.c  member.c  publisher.c  staff.c
Database/My_Li_Ma_Sy/: main.c  run.bat
Database/prompted/: book_manager.c  book_manager.h  build_and_run.bat  compile.bat  compile_and_run.bat  compile_gui.bat  compile_library_gui.bat  console.c  database.c  database.db  database.h  date_utils.c  date_utils.h  gui.c  gui.cpp  gui.h  interface.h  library_crud.c  library_crud.h  library_gui.c  library_schema.txt  main.c  manager.c  manager.h  run_all.bat  run_build.bat  schema.txt  schema_generator.c  schema_generator.py  schema_gui.c  schema_gui.manifest  sqlite_db.c
File Manipulation/: read_from_file.c
LinkedLists/First/: linked  linked.c  new  new.c
Multiplication tables/: MultiMultiTable.c  OneMultiTable.c
New folder/: compile.bat
New folder/include/: database.h  structures.h
New folder/src/: database.c  main.c
Others/Recursive Functions/: AmazingBaseConverter.c  Fibonnaci.c  SumOfFractions.c
Others/Uncategorized/: Printingletters.c  Twarimitswe Aaron.c
Patterns/: DownwardTria.c  SingleLoopDiamong.c  TimeClock.c  text.c
Patterns/Light patterns/: LIghtSquare.c  LightDiamond.c  LightInvertedIsoTria.c  LightIsoTria.c  lightHourGlass.c
Patterns/Numbers/: numbersBreaker.c  pascalsTria.c
Patterns/SolidPatterns/: Diamond.c  InvertedPyramid.c  IsoscelTriangle.c  (+4 more)
Pointers/: 1.pointerInitialization.c  2.AccessingElementsInArrayUsingPointers.c  InputAndOutputNumbersUsingArray.c  UsingPointersToManipulateStructures.c  pointerToPointer.c  searchingOfElementInArray.c  sortArray.c
assignments/: .gitignore  DuplicateHandlers.c  array.c  array_accepter_&_printer.c  sumOfArray.cpp
(+39 files in other folders)
